envoy-sidecar/deploy/grafana/envoy-sidecar-configmap.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy.yaml: >
    static_resources:
      listeners:
      - name: listener_https
        address:
          socket_address: { address: 0.0.0.0, port_value: 8443 }
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: backend
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: service
              http_filters:
              - name: envoy.router
                config: {}
          tls_context:
                  require_client_certificate: true
                  common_tls_context:
                    tls_certificates:
                      - certificate_chain:
                          filename: "/etc/envoy/certs/server.crt"
                        private_key:
                          filename: "/etc/envoy/certs/server.key"
                    validation_context:
                      trusted_ca:
                        filename: "/etc/envoy/certs/ca.crt"
      clusters:
      - name: service
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address: 
            address: 127.0.0.1
            port_value: 3000
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
