envoy-sidecar/deploy/grafana/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - name: envoy
          image: envoyproxy/envoy-alpine:v1.14-latest
          args: ["-c", "/etc/envoy.yaml", "--service-cluster", "$(POD_NAME)"]
          env:
          - name: POD_NAME
            valueFrom:
              fieldRef:
                fieldPath: metadata.name
          volumeMounts:
          - name: envoy-yaml
            mountPath: /etc/envoy.yaml
            subPath: envoy.yaml
          - name: envoy-server-certs
            mountPath: /etc/envoy/certs
      volumes:
        - name: envoy-yaml
          configMap:
            name: envoy-config
        - name: envoy-server-certs
          secret:
            secretName: envoy-server-certs
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
