envoy-sidecar/deploy/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  ports:
  - protocol: TCP
    port: 8001
    name: admin
  - protocol: TCP
    port: 8443
    name: proxy
